syntax = "proto3";
import "logic.proto";
package proto;

// The Customer sercie definition
service Broker {
    // Receive data pushed by logic
    rpc ReceiveMsgDialogue (PushDialogue) returns (PushResp);
    rpc ReceiveMsgSignal (PushSignal) returns (PushResp);
    rpc HealthCheck (HealthCheckReq) returns (HealthCheckResp);
}

message HealthCheckReq{
    string asker = 1;
}

message HealthCheckResp{
     CodeEnum code = 1;
     string msg = 2;
}

message PushRequest{
    uint64 accountId = 1;
}

message PushResp {
    CodeEnum code = 1;
    string msg = 2;
}

message PushDialogue {
    uint64 senderId = 1;
    uint64 sessionId = 2;
    uint64 receiverId = 3;
    string content = 4;
    uint64 msgId = 5;
}


message PushSignal {
    SignalTypeEnum signalType = 1;
    uint64 senderId = 2;
    uint64 receiverId = 3;
    uint64 sessionId = 4;
    oneof data{
        AccountInfo partner = 5;
        uint64 msgId = 6;
        uint64 accountId = 7;
    }
}

message AccountInfo{
    uint64 accountId = 1;
    string nickName = 2;
}

enum SignalTypeEnum {
    PartnerExit = 0; // The person you were chatting with disconnected or logged out.
    NewSession = 1; // Create session
    DeleteMsg = 2; // Delete message
    ViewedAck = 3; // Read confirmation
}

