syntax = "proto3";

package proto;

// The Customer sercie definition
service LogicDealer {
    rpc CreateAccount (CreateAccountRequest) returns (CreateAccountResponse);
    rpc Match (MatchRequest) returns (MatchResponse);
    rpc SendMsg (SendMsgRequest) returns (SendMsgResponse);
    rpc Logout (LogoutRequest) returns (LogoutResponse);
    rpc ViewedAck(ViewedAckRequest) returns(ViewedAckResponse);
    rpc Reconnect(ReConnectRequest) returns(ReConnectResponse);
}

message ViewedAckRequest {
    uint64 sessionId = 1;
    uint64 accountId = 2;
    uint64 msgId = 3;

}

message ViewedAckResponse {
    CodeEnum code = 1;
    string msg = 2;
}

enum CodeEnum {
    C000 = 0; // success
    C001 = 1; // parameter error
    C002 = 2; // internal error
    C003 = 3; // unknown error
    C004 = 4; // No data found
}

enum StatusEnum {
    Deleted = 0;
    Normal = 1;
}

enum MsgTypeEnum {
    Dialogue = 0;
    Signal = 1;
}

message CreateAccountRequest {
    string nickname = 1;
    string broker = 2;
}

message CreateAccountResponse {
    CodeEnum code = 1;
    string msg = 2;
    uint64 accountId = 3;
    string token = 4;
}

message MatchRequest {
    uint64 accountId = 1;
}

message MatchResponse {
    CodeEnum code = 1;
    string msg = 2;

    uint64 partnerId = 3;
    string partnerName = 4;
    uint64 sessionId = 5;
}

message SendMsgRequest {
    uint64 senderId = 2;
    uint64 sessionId = 3;
    MsgTypeEnum msgtype = 4;
    string content = 5;
}

message SendMsgResponse {
    CodeEnum code = 1;
    string msg = 2;
    uint64 msgId = 3;
}

message LogoutRequest {
    uint64 accountId = 1;
    string broker = 2;
}

message LogoutResponse {
    CodeEnum code = 1;
    string msg = 2;
}

message ReConnectRequest {
    uint64 accountId = 1;
    string token = 2;
    string broker = 3;
}

message ReConnectResponse {
    CodeEnum code = 1;
    string msg = 2;
    uint64 accountId = 3;
    string nickname = 4;
}